--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
       <li class="contact">
 	<i class="fa-li fa fa-envelope fa-2x" aria-hidden="true"></i>
 	<span id="person-email" itemprop="email">
-	  <a href="mailto:mjerman@uoregon.edu">mjerman@uoregon.edu</a>
+	  <a href="mailto:mail@michaeljerman.com">mail@michaeljerman.com</a>
 	</span>
       </li>
       
