--- a/research/rf/present/rf_slides.html
+++ b/research/rf/present/rf_slides.html
@@ -190,13 +190,13 @@
       backgroundTransition: 'none',
       transition: 'none',
       viewDistance: 3,
-      controls: false,
+      controls: true,
       progress: true,
       center: true,
 
       // More info https://github.com/hakimel/reveal.js#dependencies
       dependencies: [
-      { src: 'plugin/title-footer/title-footer.js', async: true, callback: function() { title_footer.initialize('Michael Jerman |    Regression Discontinuity with Adaptive Kernels | October 20, 2017'); } },
+      { src: 'plugin/title-footer/title-footer.js', async: true, callback: function() { title_footer.initialize('Michael Jerman |    Regression Discontinuity with Random Forest Kernels | October 20, 2017'); } },
       { src: 'plugin/chalkboard/chalkboard.js' },
       { src: 'plugin/markdown/marked.js' },
       { src: 'plugin/markdown/markdown.js' },
