--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="col-md-6 col-md-offset-3 text-center fh5co-heading" style="display: block; margin: 0 auto; width: 100%;">
       <div style="display: inline-block">
       <h2 style="color: #000; margin-top: 65px">about</h2>
-      <p style="color: #000">I am a Ph.D. candidate in the Department of Economics at the University of Oregon. My research interests include economic growth and development, environmental economics, inequality, remote sensing, and machine learning. <br> <br> I will be available for interviews at the 2020 ASSA meetings.</p>
+      <p style="color: #000">I am a Ph.D. candidate in the Department of Economics at the University of Oregon. My research interests include economic growth and development, environmental economics, inequality, remote sensing, and machine learning. </p>
       </div>
     </div>
     
