--- a/content/teaching/courses.html
+++ b/content/teaching/courses.html
@@ -12,14 +12,14 @@ image: "/files/india_rivers.png"
 <h2>Current Courses</h2>
 <div id="oregon-state-university" class="section level4">
 <h4>Oregon State University</h4>
-<div id="winter-2021" class="section level5">
-<h5>Winter 2021</h5>
+<div id="spring-2021" class="section level5">
+<h5>Spring 2021</h5>
 <p>Click on the course title to download the syllabus:</p>
 <ul>
-<li><a href="/files/syllabus_311_winter2021.pdf">Intermediate Microeconomics</a></li>
-<li><a href="/files/syllabus_winter_2021.pdf">Introduction to Econometrics</a></li>
-<li><a href="/files/syllabus_420_winter2021.pdf">Game Theory</a></li>
-<li><a href="/files/syllabus_383_winter2021.pdf">Economics of Discrimination</a></li>
+<li><a href="/files/syllabus_311_spring2021.pdf">Intermediate Microeconomics</a></li>
+<li><a href="/files/syllabus_spring_2021.pdf">Introduction to Econometrics</a></li>
+<li><a href="/files/syllabus_491-599_spring2021.pdf">Economics of Inequality</a></li>
+<li><a href="/files/syllabus_461_spring2021.pdf">Law and Econonomics</a></li>
 </ul>
 </div>
 </div>
@@ -27,11 +27,12 @@ image: "/files/india_rivers.png"
 <div id="previous-courses" class="section level2">
 <h2>Previous Courses</h2>
 <ul>
+<li><a href="/files/syllabus_420_winter2021.pdf">Game Theory</a></li>
+<li><a href="/files/syllabus_383_winter2021.pdf">Economics of Discrimination</a></li>
 <li><a href="/files/syllabus_411_fall2020.pdf">Advanced Microeconomics</a></li>
 <li><a href="/files/syllabus_460_fall2020.pdf">Industrial Organization</a></li>
 <li><a href="/files/syllabus_427_winter2020.pdf">Introduction to Econometrics with Calculus</a></li>
 <li><a href="/files/syllabus_423_fall2019.pdf">Pre-Econometrics (Introduction to Statistical Methods)</a></li>
 <li><a href="/files/syllabus_499.pdf">Economic Growth and Development</a></li>
-<li><a href="/files/syllabus_491_fall2018.pdf">Economics of Inequality</a></li>
 </ul>
 </div>
